style.css
@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Yellowtail&display=swap");
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Raleway", sans-serif;
}
#navBar {
  background-color: transparent;
  transition: top 0.5s ease;
}

html,
body {
  width: 100%;
  height: 100%;
}
.sectionPadding {
  padding-top: 100px;
}
button {
  font-size: 17px;
  width: 170px;
  border: none;
  outline: none;
  padding: 10px 5px;
}
#menu {
  color: #fff;
  font-size: 37px;
}
#navBar button {
  width: 60px;
}
@media (max-width: 978px) {
  #menuLinks {
    background-color: #000;
    text-align: center;
    height: 50vh;
    display: flex;
    gap: 20px;
  }
}

h2 {
  font-size: 60px;
  text-transform: capitalize;
}
h3 {
  font-size: 45px;
}
h4 {
  font-size: 50px;
}
p {
  font-size: 20px;
}
span {
  font-size: 35px;
  font-family: "Yellowtail", cursive;
  color: rgb(193, 57, 57);
}

#header {
  padding: 0 !important;
}
.nav-item a {
  font-size: 17px;
  margin-right: 30px;
}
#mainLogo {
  width: 100px;
}
#main {
  width: 100%;
  height: 100vh;
}
#main img {
  width: 100%;
  height: 100vh;
  object-fit: cover;
}
.carousel-item {
  position: relative;
}
.carousel-item::after {
  content: "";
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: #00000072;
}
.carouselContent {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
  min-width: 500px;
  display: flex;
  gap: 20px;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.carouselContent span {
  font-size: 35px;
  font-family: "Yellowtail", cursive;
  color: red;
  padding: 10px 15px;
  background-color: rgba(255, 255, 255, 0.729);
  border-radius: 3px;
}
.carouselContent h2 {
  font-weight: bold;
  color: white;
}
.carouselContent p {
  color: white;
}
.buttons {
  display: flex;
  gap: 40px;
  justify-content: space-between;
  align-items: center;
  margin-top: 30px;
}
.buttons button {
  font-size: 17px;
  width: 170px;
  border: none;
  outline: none;
  padding: 10px 5px;
  display: flex;
  gap: 10px;
  justify-content: center;
  align-items: center;
}
.buttons button i {
  font-size: 20px;
}
.buttons button:nth-child(1) {
  background-color: black;
  color: #fff;
  transition: 0.5s;
}
.buttons button:nth-child(1):hover {
  background-color: white;
  color: #000;
  transition: 0.5s;
}
/* Header Complete */
.cards {
  height: 600px;
  position: relative;
}
.cards img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.cardsContent {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #0000005a;
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
  padding: 20px;
  color: #fff;
}
.cardsContent p {
  font-size: 20px;
}
.cardsContent h4 {
  font-family: "DM Sans", sans-serif;
  font-weight: bold;
}

.owl-carousel .item {
  /* width: 350px; */
  height: 400px;
  border-radius: 40px;
}
.owl-carousel .item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 40px;
}
/*  */
.gallery-grid {
  display: grid;
  grid-template-columns: repeat(4, 1fr); /* 3 columns like col-lg-4 */
  gap: 1rem;
}
.gallery-grid div {
  height: 400px;
}
.row-span-2 {
  grid-row: span 2;
}

.col-span-2 {
  grid-column: span 2;
}

.gallery-grid img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
  transition: 0.5s;
}
.ovflow {
  position: relative;
  overflow: hidden;
}

.ovflowContent {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.403);
  display: flex;
  justify-content: center;
  align-items: center;
  transform: translateX(-100%);
  transition: 0.5s;
  color: #fff;
}
.ovflowContent i {
  color: #fff;
  font-size: 40px;
}
.ovflow:hover .ovflowContent {
  transform: translateX(0);
  transition: 0.5s;
}
.ovflow:hover img {
  scale: 1.15;
  transition: 0.5s;
}

.aboutUsContnt p {
  text-align: justify;
  margin-top: 40px;
}
.aboutUsImg {
  width: 100%;
  height: 70vh;
  background-image: url("https://plus.unsplash.com/premium_photo-1676139860076-bc568722ff75?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cGxhY2V8ZW58MHx8MHx8fDA%3D");
  background-size: contain;
  background-position: left;
  background-repeat: no-repeat;
  background-attachment: fixed;
}
.packagesCarousel .item {
  width: 100%;
  height: 400px;
}
.packagesCarousel .item img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.packagesImg {
  position: relative;
}
.packagedContent {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.493);
  color: #fff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.packagedContent h5 {
  font-size: 35px;
  text-transform: capitalize;
  color: rgb(0, 255, 229);
  font-weight: bold;
}
.packagedContent h6 {
  font-size: 20px;
  color: #fff;
}
.packagedContent p {
  text-transform: capitalize;
}
.packagedContent button {
  transition: 0.5s;
  margin-bottom: 20px;
}
.packagedContent button i {
  margin-left: 10px;
}
.packagedContent button:hover {
  background-color: black;
  color: #fff;
  transition: 0.7s;
}
#whatapp {
  background-color: rgb(5, 119, 5);
  color: #fff;
}
#whatapp:hover {
  background-color: white;
  color: #000;
}
#whatapp:hover i {
  color: green;
}
.fleetImg {
  width: 100%;
  height: 60vh;
  background-image: url("https://images.unsplash.com/photo-1688054005456-466170816196?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZmxlZXR8ZW58MHx8MHx8fDA%3D");
  background-size: contain;
  background-position: left;
  background-repeat: no-repeat;
  background-attachment: fixed;
}

.aboutUsContnt button:hover {
  background-color: black;
  color: #fff;
  transition: 0.7s;
}
.point {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
}
.point i {
  padding-right: 20px;
  font-size: 20px;
  font-weight: bold;
}
.pointContent h6 {
  font-size: 20px;
  font-weight: bold;
}
.pointContent p {
  font-size: 15px;
  margin-top: 5px;
}

#why {
  width: 100%;
  /* height: 60vh; */
}
.whyImg {
  width: 100%;
  height: 60vh;
  background-image: url("https://images.unsplash.com/photo-1508739773434-c26b3d09e071?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8d2FsbHBhcGVyfGVufDB8fDB8fHww");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
}
#discover .container-fluid {
  padding: 100px 0 0 0;
}
.discoverBanner {
  width: 100%;
  height: 70vh;
  background-image: url("https://images.unsplash.com/photo-1530789253388-582c481c54b0?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8dHJhdmVsfGVufDB8fDB8fHww");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #fff;
}
.discoverContent {
  background-color: #000000d3;
  text-align: center;
  padding: 20px 40px;
}
.happyCustomer {
  width: 100%;
  height: 60vh;
  background-image: url("https://images.unsplash.com/photo-1579047917338-a6a69144fe63?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8aGFwcHklMjBjdXN0b21lcnN8ZW58MHx8MHx8fDA%3D");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}
#customerId {
  width: 100px;
  height: 100px;
  border-radius: 50%;
}
footer {
  width: 100%;
  background-color: black;
  margin-top: 100px;
  padding-bottom: 50px;
}
footer h5 {
  color: #fff;
  margin-bottom: 30px;
}
footer p {
  color: #ccc2c2;
  font-size: 16px;
  padding-right: 100px;
}
.quickLinks {
  display: flex;
  gap: 20px;
  flex-direction: column;
}
.quickLinks a {
  text-decoration: none;
  color: #fff;
}
.quickLinks a i {
  margin-right: 20px;
}
.quickLinks a:hover {
  color: rgb(7, 114, 114);
  transition: 0.7s;
}
@media (max-width: 576px) {
  .sectionPadding {
    padding-top: 50px;
  }
  h2 {
    max-width: 300px;
    font-size: 40px;
  }
  h3 {
    font-size: 35px;
  }
  p {
    max-width: 250px;
    font-size: 4vw;
  }
  .buttons {
    flex-direction: column;
    gap: 20px;
  }
  .carouselContent {
    position: absolute;
    top: 60%;
    left: 50%;
    transform: translate(-50%, -60%);
    z-index: 1;
    min-width: 500px;
    display: flex;
    gap: 10px;
  }
  .buttons {
    margin-top: 10px;
  }
  .carouselContent span {
    font-size: 25px;
    font-family: "Yellowtail", cursive;
    color: red;
    padding: 10px 15px;
    background-color: rgba(255, 255, 255, 0.729);
    border-radius: 3px;
  }
  .gallery-grid {
    display: flex;
    flex-direction: column;
  }
  .aboutUsImg {
    background-size: cover;
    background-position: center;
  }
  .fleetImg {
    background-size: cover;
    background-position: center;
  }
  .points {
    margin-top: 30px;
  }
  .aboutUsContnt p {
    max-width: none;
  }
  .headingText p {
    max-width: none;
  }
  footer p {
    max-width: none;
    padding-right: 0;
  }
}
@media (min-width: 576px) {
  .container {
    max-width: none;
  }
}

